examples/test/testpolicy7522.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7522
  namespace: namespace348
spec:
  podSelector:
    matchLabels:
      key32: value23
      key8: value27
      key29: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value39
          key18: value0
      podSelector:
        matchLabels:
          key42: value22
